[package]
name = "rtic-oled-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nb = "1.0.0"
cortex-m-rtic = "0.6.0-rc.4"
systick-monotonic = "0.1.0-rc.2"
cortex-m = "0.7.3"
panic-semihosting = "0.5.6"
embedded-hal = "0.2.6"
sh1106 = "0.4.0"
embedded-graphics = "0.7.1"
heapless = "0.7.8"
# portable = { path = "portable" }

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["rt", "stm32f103", "medium"]

[profile.dev]
opt-level = 1
lto = true
incremental = false

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true
